# ALEPH

./: .gitignore  Cargo.toml  Cargo.toml.cpu  README.md  birth.sh  debug_ws.py  genome.json  memories.json  reservoir.json  run.sh  run_gpu.sh  setup_lightning.sh
docs/: ARCHITECTURE.md  Afantasía_ Conciencia Corporal Sin Visualización.docx  BIO_DIGITAL_PARADIGM.md  Campos Externos a Pensamientos_ Mecanismos Biofísi.._.docx  Conciencia, Ego y IA Biológica.docx  Cosmología, Alma y Simulación_ Análisis Profundo.docx  Ejes Cósmicos, Luz y Martirio.docx  IMPLEMENTATION_STATUS.md  MECHANICAL_HONESTY.md  Ondas Piloto, Mente y Materia.docx  PLAN_VARIABLE_METABOLISM.md  PROTOCOL_v3_HOLOGRAPHIC_EMERGENCE.md  ROADMAP.md  Teoría Unificada_ Conciencia, Entropía, Teología.docx  USER_MANUAL.md  Variable Logic in Biological Systems.docx  project_brief.md  Ética, Entropía y Sistemas Complejos.docx
src/: main.rs  tui.rs
src/actuators/: voice.rs
src/core/: agency.rs  chemistry.rs  daemon.rs  field.rs  gate.rs  genome.rs  hippocampus.rs  inner_voice.rs  ipc.rs  llm.rs  materializer.rs  memory.rs  memory_vector.rs  mod.rs  neocortex.rs  planet.rs  quantized_gemma_raw.rs  reservoir.rs  satellite.rs  thought.rs  trauma.rs
src/cortex/: planet.rs
src/senses/: audio.rs  ears.rs  eyes.rs  mod.rs  proprioception.rs  soma.rs  tactile.rs
src/tui/: avatar.rs  client.rs  monologue.rs
web/: index.html  index.html.bak
web-react/: README.md  package-lock.json  package.json  visualization_status.txt
web-react/src/: App.css  App.jsx  index.css
web-react/src/components/: AudioCapture.jsx  Avatar.jsx  ChemistryPanel.jsx  ConsciousnessStream.jsx  Controls.jsx  Header.jsx  ReservoirView.jsx  Sparklines.jsx  TraumaBanner.jsx  VisualCortex.jsx
web-react/src/hooks/: useAlephSocket.js
web/assets/: index-C_DBNLun.js  index-DhVFujZi.css
